<resources>
    <string name="app_name">Base Project</string>
    <string name="well_come_to_car_manufacturer">Well come to Car Manufacturer!</string>
    <string name="MW_sport">MW Sport</string>
    <string name="MWsport">MWSport</string>
    <string name="MWbusiness">MWBusiness</string>
    <string name="RollRoycesport">RollRoyceSport</string>
    <string name="RollRoycebusiness">RollRoyceBusiness</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="seat">Seat</string>
    <string name="power">Power</string>
</resources>